RESOLVED FIXED56127
Fix allocation of native function with a cached thunk
https://bugs.webkit.org/show_bug.cgi?id=56127
Summary Fix allocation of native function with a cached thunk
Oliver Hunt
Reported 2011-03-10 11:38:53 PST
Fix allocation of native function with a cached thunk
Attachments
Patch (6.45 KB, patch)
2011-03-10 11:40 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2011-03-10 11:40:14 PST
Gavin Barraclough
Comment 2 2011-03-10 12:31:56 PST
Fixed in r80743
Oliver Hunt
Comment 3 2011-03-10 12:36:27 PST
Errr wrong bug mate :)
Oliver Hunt
Comment 4 2011-03-10 13:17:08 PST
Gavin Barraclough
Comment 5 2011-03-10 14:02:48 PST
Oooops!
Sergio Villar Senin
Comment 6 2011-03-11 03:02:35 PST
I think this commit maybe the source of some JSC crashes in GTK 32bit Release bot we have been observing recently. In particular these two tests are failing consistently since then: fast/profiler/dead-time.html fast/profiler/stop-profiling-after-setTimeout.html
Sergio Villar Senin
Comment 7 2011-03-11 04:08:55 PST
(In reply to comment #6) > I think this commit maybe the source of some JSC crashes in GTK 32bit Release bot we have been observing recently. In particular these two tests are failing consistently since then: > > fast/profiler/dead-time.html > fast/profiler/stop-profiling-after-setTimeout.html Looks like I was wrong, after reverting 80742 and 80743 no crash at all. Sorry for the noise.
Note You need to log in before you can comment on or make changes to this bug.