Source/JavaScriptCore/runtime/JSZombie.cpp
@@ -38,7 +38,7 @@ Structure* JSZombie::leakedZombieStructure() {
     static Structure* structure = 0;
     if (!structure) {
         Structure::startIgnoringLeaks();
-        structure = Structure::create(jsNull(), TypeInfo(UnspecifiedType), 0, &info).leakRef();
+        structure = Structure::create(jsNull(), TypeInfo(UnspecifiedType), 0, &s_info).leakRef();
         Structure::stopIgnoringLeaks();
     }
     return structure;
